# keyword_spotting

./: baseline.ipynb  baseline_sj.ipynb  binary_baseline_no_downsampling.ipynb  cnn.ipynb  downsample_audio.ipynb  eda_helper.py  initial_eda.ipynb  initial_eda_actual.ipynb  preprocess_data.ipynb  pyproject.toml  requirements.txt  test_text.py
_demo_archive/: demo_v2.ipynb  demov3.py  send_imessage.applescript
archived_notebooks/: baseline_sj.ipynb  monai_densenet.ipynb
archived_notebooks/audio_to_mel/: preprocess_data_downsampled.ipynb  preprocess_full_data.ipynb
archived_notebooks/yolo_models/downsampled_models/runs/classify/train/: args.yaml  results.csv
archived_notebooks/yolo_models/downsampled_models/runs/classify/train1/: results.csv
archived_notebooks/yolo_models/downsampled_models/runs/classify/train2/: args.yaml  results.csv
archived_notebooks/yolo_models/downsampled_models/runs/classify/train3/: args.yaml
archived_notebooks/yolo_models/full_models/runs/classify/train/: args.yaml  results.csv
audio_to_mel/: preprocess_data_downsampled.ipynb  preprocess_full_data.ipynb
data/: upload_to_gcs.sh
data/data_process/: por_preprocess_full_data.py
demo/: demo_v1.ipynb  demo_v2.ipynb
yolo_models/downsampled_models/runs/classify/train1/: args.yaml
yolo_models/downsampled_models/runs/classify/train3/: results.csv
yolo_models/full_models/runs/classify/train/weights/: last.pt
yolo_models/full_models/runs/classify/train2/: args.yaml  results.csv
yolo_models/full_models/runs/classify/train4/: results.csv
yolov8_notebooks/: yolo_model.ipynb
(+18 files in other folders)
