[tool.poetry]
name = "keyword-spotting"
version = "0.1.0"
description = ""
authors = ["Jaijai <jaijai0924@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
librosa = "^0.10.2.post1"
pandas = "^2.2.2"
jupyter = "^1.0.0"
ipykernel = "^6.29.4"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
keras = "^3.3.3"
dask = "^2024.6.0"
scikit-learn = "^1.5.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
google-cloud-storage = "^2.19.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
notebook = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
